[DNM] Use antsibull-docs to create documentation

--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,14 @@ commands =
   yamllint -c .yamllint.yaml tests
 
 [testenv:add_docs]
-deps = git+https://github.com/ansible-network/collection_prep
-commands = collection_prep_add_docs -p .
+setenv =
+  LC_ALL=en_US.UTF-8
+deps =
+  git+https://github.com/ansible-network/collection_prep
+  antsibull-docs
+commands =
+  collection_prep_add_docs -p .
+  antsibull-docs collection-plugins community.vmware --dest-dir docs/ --use-current --output-format simplified-rst --fqcn-plugin-names
 
 [testenv:antsibull-changelog]
 setenv =
