--- a/.gitignore
+++ b/.gitignore
@@ -389,3 +389,6 @@ changelogs/.plugin-cache.yaml
 
 # End of https://www.gitignore.io/api/git,linux,pydev,python,windows,pycharm+all,jupyternotebook,vim,webstorm,emacs,dotenv
 tests/integration/cloud-config-vcenter.ini
+
+# Visual Studio Code
+.vscode
