--- a/tests/integration/targets/vmware_vm_inventory/prepare_environment.yml
+++ b/tests/integration/targets/vmware_vm_inventory/prepare_environment.yml
@@ -31,6 +31,8 @@
           type: thin
           datastore: local
         cdrom:
+        - controller_number: 0
+          unit_number: 0
           type: iso
           iso_path: "[{{ ro_datastore }}] fedora.iso"
         hardware:
