Updated changelog fragment

--- a/changelogs/fragments/1886_fix_vmware_portgroup_info.yml
+++ b/changelogs/fragments/1886_fix_vmware_portgroup_info.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - vmware_portgroup_info: fix issue when failure_detection is reported as 'link_status_only' instad of 'No override'
+  - vmware_portgroup_info - fix issue when failure_detection is reported as 'link_status_only' instad of 'No override'
