Improve changelog fragments for 4.0.0

--- a/changelogs/fragments/1472-vmware_guest.yml
+++ b/changelogs/fragments/1472-vmware_guest.yml
@@ -1,2 +1,2 @@
 removed_features:
-  - vmware_guest - Removed specifying CDROM configuration as a dict, instead use a list (https://github.com/ansible-collections/community.vmware/issues/1472).
+  - vmware_guest - removed specifying CDROM configuration as a dict, instead use a list (https://github.com/ansible-collections/community.vmware/issues/1472).
