--- a/changelogs/fragments/1761_vmware_vm_info.yml
+++ b/changelogs/fragments/1761_vmware_vm_info.yml
@@ -1,3 +1,3 @@
 breaking_changes:
-  - vmware_vm_info - Added prefix length to IP addresses in vm_network, so they now show up as for example 10.76.33.228/24 instead of just 10.76.33.228
+  - vmware_vm_info - added prefix length to IP addresses in vm_network, so they now show up as for example 10.76.33.228/24 instead of just 10.76.33.228
     (https://github.com/ansible-collections/community.vmware/issues/1761).
