--- a/changelogs/fragments/1847_vmware_guest_snapshot.yml
+++ b/changelogs/fragments/1847_vmware_guest_snapshot.yml
@@ -1,2 +1,2 @@
 minor_changes:
-  - add new snapshot_id option to the vmware_guest_snapshot module(https://github.com/ansible-collections/community.vmware/pull/1847).
+  - vmware_guest_snapshot - add new snapshot_id option (https://github.com/ansible-collections/community.vmware/pull/1847).
