--- a/changelogs/fragments/1853.yml
+++ b/changelogs/fragments/1853.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - "vmware_deploy_ovf: fix error in finding networks part of code https://github.com/ansible-collections/community.vmware/issues/1853"
+  - vmware_deploy_ovf - fix error in finding networks part of code (https://github.com/ansible-collections/community.vmware/issues/1853).
