--- a/changelogs/fragments/1898-vmware_rest_client.yml
+++ b/changelogs/fragments/1898-vmware_rest_client.yml
@@ -1,2 +1,2 @@
-breaking_changes:
-  - vmware_rest_client - Remove deprecated method `get_tag_by_category()` (https://github.com/ansible-collections/community.vmware/issues/1898).
+removed_features:
+  - vmware_rest_client - removed deprecated method `get_tag_by_category()` (https://github.com/ansible-collections/community.vmware/issues/1898).
