--- a/changelogs/fragments/1799_configure_snmp_on_esxii_hosts_via_vcenter.yaml
+++ b/changelogs/fragments/1799_configure_snmp_on_esxii_hosts_via_vcenter.yaml
@@ -1,2 +1,3 @@
 minor_changes:
-  - community.vmware.vmware_host_snmp module now can configure SNMP agent on set of hosts (list in esxi_hostname parameter or as cluster in cluster_name parameter). The ability to configure the host directly remains
+  - vmware_host_snmp module now can configure SNMP agent on set of hosts (list in esxi_hostname parameter or as cluster in cluster_name parameter). The ability to configure the host directly remains
+    (https://github.com/ansible-collections/community.vmware/issues/1799).
