--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ commands =
   antsibull-changelog lint
   {toxinidir}/tools/check-ignores-order
   yamllint -c .yamllint.yaml tests
+allowlist_externals =
+  {toxinidir}/tools/check-ignores-order
 
 [testenv:add_docs]
 deps = git+https://github.com/ansible-network/collection_prep
