--- a/tests/integration/targets/vmware_object_rename/tasks/main.yml
+++ b/tests/integration/targets/vmware_object_rename/tasks/main.yml
@@ -2,4 +2,4 @@
 # Copyright: (c) 2019, Abhijeet Kasurde <akasurde@redhat.com>
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 
-- include: dc_rename.yml
+- include_tasks: dc_rename.yml
