--- a/tests/integration/targets/vmware_tag_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_tag_info/tasks/main.yml
@@ -2,4 +2,4 @@
 # Copyright: (c) 2020, Abhijeet Kasurde <akasurde@redhat.com>
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 
-- include: tag_info.yml
+- include_tasks: tag_info.yml
