Fix integration tests

--- a/tests/integration/targets/vmware_category/tasks/associable_obj_test.yml
+++ b/tests/integration/targets/vmware_category/tasks/associable_obj_test.yml
@@ -35,4 +35,4 @@
 - name: Check if we get correct associable datatype for {{ category_name }}
   assert:
     that:
-      - "'{{ expected_result }}' in {{ category_datatype }}"
+      - "expected_result in category_datatype"
