--- a/tests/integration/targets/vmware_guest_network/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_network/tasks/main.yml
@@ -89,7 +89,7 @@
   assert:
     that:
       - add_netadapter is changed
-      - "{{ add_netadapter.results[1].network_info | length | int }} == {{ netadapter_num | int + 2 }}"
+      - "add_netadapter.results[1].network_info | length | int == netadapter_num | int + 2"
 
 - name: delete one specified network adapter
   community.vmware.vmware_guest_network:
@@ -108,7 +108,7 @@
   assert:
     that:
       - del_netadapter is changed
-      - "{{ del_netadapter.network_info | length | int }} == {{ netadapter_num | int + 1 }}"
+      - "del_netadapter.network_info | length | int == netadapter_num | int + 1"
 
 - name: get instance uuid of virtual machines
   community.vmware.vmware_guest_info:
@@ -142,7 +142,7 @@
   assert:
     that:
       - add_netadapter_instanceuuid is changed
-      - "{{ add_netadapter_instanceuuid.network_info | length | int }} == {{ netadapter_num | int + 2 }}"
+      - "add_netadapter_instanceuuid.network_info | length | int == netadapter_num | int + 2"
 
 - name: delete one specified network adapter
   community.vmware.vmware_guest_network:
@@ -159,7 +159,7 @@
   assert:
     that:
       - del_netadapter is changed
-      - "{{ del_netadapter.network_info | length | int }} == {{ netadapter_num | int + 1 }}"
+      - "del_netadapter.network_info | length | int == netadapter_num | int + 1"
 
 - name: delete again one specified network adapter (idempotency)
   community.vmware.vmware_guest_network:
@@ -178,7 +178,7 @@
   assert:
     that:
       - not (del_again_netadapter is changed)
-      - "{{ del_again_netadapter.network_info | length | int }} == {{ netadapter_num | int + 1 }}"
+      - "del_again_netadapter.network_info | length | int == netadapter_num | int + 1"
 
 - name: disable DirectPath I/O on a Vmxnet3 adapter
   community.vmware.vmware_guest_network:
@@ -226,7 +226,7 @@
   assert:
     that:
       - disc_netadapter is changed
-      - "{{ disc_netadapter.network_info[netadapter_num | int]['connected'] }} == false"
+      - "disc_netadapter.network_info[netadapter_num | int]['connected'] == false"
 
 - name: Check if network does not exists
   community.vmware.vmware_guest_network:
@@ -396,7 +396,7 @@
 - name: check that there's no adapters left
   assert:
     that:
-      - "{{ nic_info2.network_info | length | int }} == 0"
+      - "nic_info2.network_info | length | int == 0"
 
 - name: add new adapter(s)
   community.vmware.vmware_guest_network:
@@ -412,7 +412,7 @@
 - name: check that nic was created
   assert:
     that:
-      - "{{ new_nic.network_info | length | int }} > 0"
+      - "new_nic.network_info | length | int > 0"
 
 - name: add new PVRDMA adapter
   community.vmware.vmware_guest_network:
@@ -429,7 +429,7 @@
 - name: check that PVRDMA nic was created
   assert:
     that:
-      - "{{ new_nic_pvrdma.network_info | length | int }} == {{ new_nic.network_info | length | int + 1 }}"
+      - "new_nic_pvrdma.network_info | length | int == new_nic.network_info | length | int + 1"
 
 - name: remove PVRDMA adapter
   community.vmware.vmware_guest_network:
@@ -445,7 +445,7 @@
 - name: check that PVRDMA nic was removed
   assert:
     that:
-      - "{{ new_nic_pvrdma.network_info | length | int - 1 }} == {{ remove_nic_pvrdma.network_info | length | int }}"
+      - "new_nic_pvrdma.network_info | length | int - 1 == remove_nic_pvrdma.network_info | length | int"
 
 # https://github.com/ansible-collections/community.vmware/issues/204
 - name: "Change a dvpg with in same DVS(integration test for 204)"
