--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -26,7 +26,6 @@ releases:
       - vmware_host_snmp module now can configure SNMP agent on set of hosts (list
         in esxi_hostname parameter or as cluster in cluster_name parameter). The ability
         to configure the host directly remains (https://github.com/ansible-collections/community.vmware/issues/1799).
-      - vmware_guest - Add IPv6 support for VM network interfaces (https://github.com/ansible-collections/community.vmware/pull/1937)
       removed_features:
       - Removed module util `version` (https://github.com/ansible-collections/community.vmware/issues/1639).
       - vmware_guest - removed specifying CDROM configuration as a dict, instead use
@@ -56,6 +55,8 @@ releases:
       bugfixes:
       - vmware_vm_info - Fix an AttributeError when gathering network information
         (https://github.com/ansible-collections/community.vmware/pull/1919).
+      minor_changes:
+      - vmware_guest - Add IPv6 support for VM network interfaces (https://github.com/ansible-collections/community.vmware/pull/1937)
     fragments:
     - 1919-vmware_vm_info.yml
     release_date: '2023-11-28'
