--- a/changelogs/fragments/1930-fix_ssl_deprecation_function.yml
+++ b/changelogs/fragments/1930-fix_ssl_deprecation_function.yml
@@ -1,3 +1,3 @@
 bugfixes:
-  - module_utils/vmware.py - remove ssl.wrap_socet() function. Replaced for code based on ssl.get_server_certificate().
-    https://github.com/ansible-collections/community.vmware/issues/1930
+  - module_utils/vmware.py - remove ssl.wrap_socet() function. Replaced for code based on ssl.get_server_certificate
+    (https://github.com/ansible-collections/community.vmware/issues/1930).
