--- a/tests/integration/targets/vmware_first_class_disk_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_first_class_disk_info/tasks/main.yml
@@ -86,6 +86,7 @@
     password: "{{ vcenter_password }}"
     datastore_name: "{{ rw_datastore }}"
     disk_name: "firstclassdisk"
+    validate_certs: false
   register: disk_info
   delegate_to: localhost
 
