--- a/changelogs/fragments/2000-fix-vmware-guest-idempotency-with-dvswitch.yml
+++ b/changelogs/fragments/2000-fix-vmware-guest-idempotency-with-dvswitch.yml
@@ -1,3 +1,3 @@
-minor_changes:
+bugfixes:
   - vmware_guest - Fix vmware_guest always reporting change when using dvswitch.
     (https://github.com/ansible-collections/community.vmware/pull/2000).
