--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -19,8 +19,8 @@ on:
   push:
     branches:
       - main
-      - stable-2.x
       - stable-3.x
+      - stable-4.x
   pull_request:
   # Run CI once per day (at 07:12 UTC)
   # This ensures that even if there haven't been commits that we are still
@@ -66,6 +66,7 @@ jobs:
           # - stable-2.14
           - stable-2.15
           - stable-2.16
+          - stable-2.17
           # - devel
           - milestone
     # Ansible-test on various stable branches does not yet work well with cgroups v2.
@@ -131,6 +132,7 @@ jobs:
           # - stable-2.14
           - stable-2.15
           - stable-2.16
+          - stable-2.17
           # - devel
           - milestone
 
