Simplified guest module

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -3,6 +3,7 @@ requires_ansible: '>=2.15.0'
 
 action_groups:
   vmware:
+  - guest
   - vcenter_domain_user_group_info
   - vcenter_extension
   - vcenter_extension_info
