--- a/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
@@ -805,3 +805,85 @@
     - assert:
         that:
           - delete_test_dvs_port_group_issues_637_idempotency_check_result.changed is sameas true
+
+- name: Create portgroup for num_ports check
+  community.vmware.vmware_dvs_portgroup:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    portgroup_name: "portgroup2053"
+    switch_name: "{{ dvswitch1 }}"
+    vlan_id: 2053
+    port_binding: static
+  register: create_portgroup2053_result
+
+- assert:
+    that:
+      - create_portgroup2053_result is changed
+
+- name: Check idempotency for unspecified num_ports
+  community.vmware.vmware_dvs_portgroup:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    portgroup_name: "portgroup2053"
+    switch_name: "{{ dvswitch1 }}"
+    vlan_id: 2053
+    port_binding: static
+  register: portgroup2053_check1_result
+
+- assert:
+    that:
+      - portgroup2053_check1_result is not changed
+
+- name: Update for num_ports
+  community.vmware.vmware_dvs_portgroup:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    portgroup_name: "portgroup2053"
+    switch_name: "{{ dvswitch1 }}"
+    vlan_id: 2053
+    port_binding: static
+    num_ports: 8
+  register: portgroup2053_check2_result
+
+- assert:
+    that:
+      - portgroup2053_check2_result is changed
+
+- name: Check idempotency for unspecified num_ports
+  community.vmware.vmware_dvs_portgroup:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    portgroup_name: "portgroup2053"
+    switch_name: "{{ dvswitch1 }}"
+    vlan_id: 2053
+    port_binding: static
+  register: portgroup2053_check3_result
+
+- assert:
+    that:
+      - portgroup2053_check3_result is not changed
+
+- name: Delete num_ports check portgroup
+  community.vmware.vmware_dvs_portgroup:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    portgroup_name: "portgroup2053"
+    switch_name: "{{ dvswitch1 }}"
+    vlan_id: 2053
+    port_binding: static
+    state: absent
+  register: delete_portgroup2053_result
+
+- assert:
+    that:
+      - delete_portgroup2053_result is changed
