--- a/tests/integration/targets/vmware_content_library_manager/tasks/main.yml
+++ b/tests/integration/targets/vmware_content_library_manager/tasks/main.yml
@@ -100,7 +100,7 @@
     state: absent
 
 - name: get finger print
-  shell: echo | openssl s_client -connect wp-content.vmware.com:443 |& openssl x509 -fingerprint -noout
+  shell: echo | openssl s_client -connect wp-content.broadcom.com:443 |& openssl x509 -fingerprint -noout
   register: _finger_print
 - debug: var=_finger_print
 
@@ -113,7 +113,7 @@
     validate_certs: false
     library_name: Sample_Subscribed_Library
     library_description: Sample Description
-    subscription_url: "https://wp-content.vmware.com/v2/latest/lib.json"
+    subscription_url: "https://wp-content.broadcom.com/v2/latest/lib.json"
     update_on_demand: true
     library_type: subscribed
     ssl_thumbprint: '{{ _finger_print.stdout.split("=")[1] }}'
@@ -144,7 +144,7 @@
     validate_certs: false
     library_name: Sample_Subscribed_Library
     library_description: Update Sample Description
-    subscription_url: https://download3.vmware.com/software/vmw-tools/lib.json
+    subscription_url: "https://wp-content.broadcom.com/v2/latest/lib.json"
     update_on_demand: true
     library_type: subscribed
     ssl_thumbprint: '{{ _finger_print.stdout.split("=")[1] }}'
