--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1481,6 +1481,17 @@ releases:
     - 2036-missing_error_msg_in_vmware_guest.yml
     - 2044-error_in_adding_disk_to_vm_in_vmware_guest.yml
     release_date: '2024-04-20'
+  3.11.4:
+    changes:
+      bugfixes:
+      - vmware_cluster_dpm - Handle case where DPM config has not been initialized
+        yet and is None (https://github.com/ansible-collections/community.vmware/pull/2057).
+      - vmware_dvs_portgroup - Fix erroneously reporting a change when `port_binding`
+        is static and `num_ports` not specified (https://github.com/ansible-collections/community.vmware/pull/2053).
+    fragments:
+    - 2053-vmware_dvs_portgroup.yml
+    - 2057-vmware_cluster_dpm-handle-dpm-none-config.yml
+    release_date: '2024-05-19'
   3.2.0:
     changes:
       bugfixes:
