Fix cloud.common dependency

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -17,7 +17,8 @@ tags:
   - cloud
   - vmware
   - virtualization
-dependencies: {}
+dependencies:
+  cloud.common: ">=3.0.0,<=5.0.0"
 repository: https://github.com/ansible-collections/community.vmware.git
 homepage: https://github.com/ansible-collections/community.vmware
 issues: https://github.com/ansible-collections/community.vmware/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc
