--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -147,3 +147,23 @@ releases:
     - 2057-vmware_cluster_dpm-handle-dpm-none-config.yml
     - 2071-clarify-pyvmomi-requirement.yml
     release_date: '2024-05-19'
+  4.5.0:
+    changes:
+      bugfixes:
+      - vcenter_folder - removed documentation that incorrectly said `folder_type`
+        had no effect when `parent_folder` was set
+      - vmware_cluster_vcls - fixed bug caused by pyvmomi >=7.0.3 returning the vlcs
+        cluster config attribute as None when it was previously undefined. Now if
+        the vCLS config is not initialized on the cluster, the module will initialize
+        it using the user's desired state.
+      - vmware_host_logbundle - Manifests previously was separared by "&", thus selecting
+        first manifest. Fix now separates manifests with URL encoded space, thus correctly
+        supplying the manifests.  (https://github.com/ansible-collections/community.vmware/pull/2090).
+      minor_changes:
+      - vmware_host_logbundle - Add timeout parameter (https://github.com/ansible-collections/community.vmware/pull/2092).
+    fragments:
+    - 2080_bugfix_hadnle_vcls_none_config.yml
+    - 2088_bugfix_correct_vcenter_folder_docs.yml
+    - 2090-vmware_host_logbundle.yml
+    - 2092-vmware_host_logbundle.yml
+    release_date: '2024-07-12'
