Deprecate vmware_cluster_drs

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -177,3 +177,10 @@ action_groups:
   - vsan_health_silent_checks
   - vsphere_copy
   - vsphere_file
+
+plugin_routing:
+  modules:
+    vmware_cluster_drs:
+      deprecation:
+        removal_version: 6.0.0
+        warning_text: Use vmware.vmware.cluster_drs instead.
