--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -167,3 +167,25 @@ releases:
     - 2090-vmware_host_logbundle.yml
     - 2092-vmware_host_logbundle.yml
     release_date: '2024-07-12'
+  4.6.0:
+    changes:
+      bugfixes:
+      - Document dependency on requests (https://github.com/ansible-collections/community.vmware/issues/2127).
+      - vmware_guest_disk - round size to int, supporting float values properly (https://github.com/ansible-collections/community.vmware/issues/123).
+      - vmware_guest_snapshot - Update documentation regarding snapshot_id parameter
+        (https://github.com/ansible-collections/community.vmware/issues/2145).
+      deprecated_features:
+      - vmware_cluster_drs - the module has been deprecated and will be removed in
+        community.vmware 6.0.0 (https://github.com/ansible-collections/community.vmware/pull/2136).
+      minor_changes:
+      - vmware_vm_vm_drs_rule - added datacenter argument to correctly deal with multiple
+        clusters with same name(https://github.com/ansible-collections/community.vmware/issues/2101).
+      - vsphere_file - Fix examples in documentation (https://github.com/ansible-collections/community.vmware/issues/2110).
+    fragments:
+    - 2055-vmware_guest_snapshot.yml
+    - 2095_bugfix_vmware_guest_disk_round_size_to_int.yml
+    - 2102_vm_vm_drs_rule_datacenter_argument.yml
+    - 2110-vsphere_file.yml
+    - 2127-require-requests.yml
+    - 2136-deprecate-vmware_cluster_drs.yml
+    release_date: '2024-09-06'
