--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -64,8 +64,8 @@ jobs:
           # - stable-2.12
           # - stable-2.13
           # - stable-2.14
-          - stable-2.15
-          - stable-2.16
+          # - stable-2.15
+          # - stable-2.16
           - stable-2.17
           # - devel
           - milestone
@@ -131,8 +131,8 @@ jobs:
           # - stable-2.12
           # - stable-2.13
           # - stable-2.14
-          - stable-2.15
-          - stable-2.16
+          # - stable-2.15
+          # - stable-2.16
           - stable-2.17
           # - devel
           - milestone
