Deprecate vmware_cluster_vcls

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -188,3 +188,7 @@ plugin_routing:
       deprecation:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_drs instead.
+    vmware_cluster_vcls:
+      deprecation:
+        removal_version: 6.0.0
+        warning_text: Use vmware.vmware.cluster_vcls instead.
