--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-requests
-pyVmomi>=6.7.1
-git+https://github.com/vmware/vsphere-automation-sdk-python.git ; python_version >= '2.7'  # Python 2.6 is not supported
+pyVmomi>=8.0.3.0.1
+vmware-vcenter
+vmware-vapi-common-client
