--- a/tests/integration/targets/vmware_guest_tools_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_tools_info/tasks/main.yml
@@ -33,7 +33,8 @@
 - name: assert VMware tools info returned
   assert:
     that:
-      - "vmtools_info.vmtools_info.vm_tools_install_status != ''"
+      - "vmtools_info.vmtools_info.vm_tools_version_status != ''"
+      - "vmtools_info.vmtools_info.vm_tools_running_status != ''"
 
 - name: get VMware tools info of virtual machine by name
   vmware_guest_tools_info:
@@ -48,4 +49,5 @@
 - name: assert VMware tools info returned
   assert:
     that:
-      - "vmtools_info.vmtools_info.vm_tools_install_status != ''"
+      - "vmtools_info.vmtools_info.vm_tools_version_status != ''"
+      - "vmtools_info.vmtools_info.vm_tools_running_status != ''"
