--- a/tests/integration/targets/vmware_evc_mode/tasks/main.yml
+++ b/tests/integration/targets/vmware_evc_mode/tasks/main.yml
@@ -8,7 +8,7 @@
     setup_datacenter: true
 
 - name: add cluster
-  vmware_cluster:
+  vmware.vmware.cluster:
     validate_certs: false
     hostname: "{{ vcenter_hostname }}"
     username: "{{ vcenter_username }}"
