--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1,2 +1,34 @@
 ancestor: 4.7.0
 releases:
+  5.0.0:
+    changes:
+      breaking_changes:
+      - Adding a dependency on the ``vmware.vmware`` collection (https://github.com/ansible-collections/community.vmware/pull/2159).
+      - Depending on ``vmware-vcenter`` and ``vmware-vapi-common-client`` instead
+        of ``https://github.com/vmware/vsphere-automation-sdk-python.git`` (https://github.com/ansible-collections/community.vmware/pull/2163).
+      - Dropping support for pyVmomi < 8.0.3.0.1 (https://github.com/ansible-collections/community.vmware/pull/2163).
+      - Module utils - Removed ``vmware.run_command_in_guest()`` (https://github.com/ansible-collections/community.vmware/pull/2175).
+      - Removed support for ansible-core version < 2.17.0.
+      - vmware_dvs_portgroup - Removed ``security_override`` alias for ``mac_management_override``
+        and support for ``securityPolicyOverrideAllowed`` which has been deprected
+        in the vSphere API (https://github.com/ansible-collections/community.vmware/issues/1998).
+      - vmware_dvs_portgroup_info - Removed ``security_override`` because it's deprecated
+        in the vSphere API (https://github.com/ansible-collections/community.vmware/issues/1998).
+      - vmware_guest_tools_info - Removed deprecated ``vm_tools_install_status`` from
+        the result (https://github.com/ansible-collections/community.vmware/issues/2078).
+      bugfixes:
+      - vmware_all_snapshots_info - fixed the datacenter parameter was ignored(https://github.com/ansible-collections/community.vmware/pull/2165).
+      major_changes:
+      - vmware_guest_tools_upgrade - Subsitute the deprecated ``guest.toolsStatus``
+        (https://github.com/ansible-collections/community.vmware/pull/2174).
+      - vmware_vm_shell - Subsitute the deprecated ``guest.toolsStatus`` (https://github.com/ansible-collections/community.vmware/pull/2174).
+    fragments:
+    - 1998-dvs_portgroup.yml
+    - 2078-vmware_guest_tools_info.yml
+    - 2138-vmware_all_snapshots_info.yml
+    - 2159-depend-on-vmware.vmware.yml
+    - 2174.yml
+    - 2175-drop-module_utils.vmware.run_command_in_guest.yml
+    - 5.0.0-required_ansible_version.yml
+    - 5.0.0-requirements.yml
+    release_date: '2024-09-20'
